--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -72,7 +72,7 @@ section{
 
 }
 section.page_one{
-	background: url(../images/bg1.png) no-repeat center center;
+	background: url(https://github.com/AZUKI-7/goforxiaobo/blob/master/images/bg1.png) no-repeat center center;
 	animation:0.4s myscale 1;	
 	color: $white;	
 }
